# autograd

./: .gitignore  RC832_SETUP.md  README.md  glm-4.5md  pyproject.toml  test_basic.py  test_rc832.py
autograd/: __init__.py  adam.py  arithmetic.py  context.py  conv_2d_operation.py  demo_mlp_classification.py  demo_regression.py  loss.py  mlp.py  multi_layer_mlp.py  operation.py  optimizer.py  tensor.py
autograd/datasets/: eng_to_pl_data.py  hit_uav_patches.py  shakespeare_data.py  trajectory_generator.py
autograd/demos/: demo_lstm_shakespeare.py  demo_mlp.py  demo_object_following.py  demo_orbital_following.py  demo_rnn_sheakeshpeare.py  demo_seq2seq_translation.py  demo_trajectory_prediction.py  hituav_person_detector.py  hituav_tracking.py  mnist_cnn.py  mnist_mlp.py  optimizers.py
autograd/drone_problems/: demo_deep_target_detector.py  demo_nn_control.py  demo_simple_tracker.py  demo_target_detector.py  demo_trajectory_prediction.py  drone_physics.py  kalman.py  landing_controller.py  multi_output_nn.py  multi_target_tracker.py  orbital_follower.py  pursuit.py  (+4 more)
tests/: test_adam.py  test_avg_pool_2d_op.py  test_basic.py  test_bug_detection.py  test_conv_2d_op.py  test_cross_entropy.py  test_dataloader.py  test_div.py  test_iou.py  test_kalman.py  test_landing_pad.py  test_log_softmax.py  test_lr_schedulers.py  test_mat_mul.py  test_max_pool_2d_op.py  test_mlp.py  test_mul.py  test_neg.py  test_nll_loss.py  test_nms.py  test_object_following.py  test_optimizer.py  test_orbital_follower.py  test_pow.py  test_pursuit.py  test_relu.py  test_reshape_op.py  test_sgd.py  test_sigmoid.py  test_simple_cnn.py  test_simple_tracker.py  test_softmax.py  test_tanh.py  test_trajectory_predictor.py  test_waypoint_navigation.py  test_weight_decay.py
(+22 files in other folders)
