[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autograd"
version = "0.1.0"
description = "Educational autograd engine implementation"
authors = [{name = "Your Name"}]
requires-python = ">=3.11"
dependencies = [
    "manim>=0.19.0",
    "matplotlib>=3.10.6",
    "numpy>=1.20.0",
    "pillow>=11.3.0",
    "python-mnist>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
